syntax = "proto3";

option java_package = "grpc";


message Empty{}

message GetUserRequest{
	string id = 1;
}


message UserDTO{
	int32 id = 1;
	string nombre= 2;
	int32 edad = 3;
}

message ListUserDTO{
	repeated UserDTO list = 1;
}

message GenericResponse{
	int32 codigo = 1;
	string msg = 2;
}

service user{
	rpc getUser(GetUserRequest) returns(UserDTO);
	rpc getAllUser(Empty) returns( ListUserDTO);
	rpc createUser(UserDTO) returns(GenericResponse);

}
